@@ -18,12 +18,13 @@ Carter Brey</a>, Principal Cellist, New York Philharmonic</em>
 <p>
 &ldquo;I think that Lilypond is already ready for "prime time" -- I've used it
 for two years in a university music composition course, thereby saving
-me $300 (or whatever the "cheap" student version of Finale or Sibelius
-costs).  And some people have exclaimed "wow!  How did you get Finale to
+me hundreds of dollars (or whatever the "cheap" student versions of Finale or
+Sibelius costs).  And some people exclaim "wow!  How did you get Finale to
 make music that looks so good?"&rdquo;
 
 <p align=right>
-<em><a href="http://www.sfu.ca/~gperciva/">Graham Percival</a>, cello teacher.
+<em><a href="http://www.sfu.ca/~gperciva/">Graham Percival</a>, composition
+student and cello teacher.
 </em>
 
 
