@@ -1,6 +1,7 @@
 2003-08-11  Graham Percival  <gperlist@shaw.ca>
 
 	* site/index.html: fix spelling (esthetics -> aesthetics).
+	* site/switch/testimonials.html: edit quote, add minor personal info.
 
 2003-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
